[package]
name = "foro-tombi"
version = "0.5.2"
edition = "2021"
repository = "https://github.com/foro-fmt/foro-tombi"

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.87"
bytes = "1.10.1"
either = "1.15.0"
foro-plugin-utils = { version = "0.2.1", git = "https://github.com/nahco314/foro-plugin-utils" }
glob = "0.3.2"
nu-ansi-term = "0.50.1"
serde = "1.0.219"
serde_json = "1.0.128"
serde_tombi = { rev = "647fc3e40d7e507fa8379b808c506359e1475091", git = "https://github.com/nahco314/tombi/" }
# serde_tombi = { path = "../tombi/rust/serde_tombi" }
smol = "2.0.2"
surf = "2.3.2"
tombi-config = { rev = "647fc3e40d7e507fa8379b808c506359e1475091", git = "https://github.com/nahco314/tombi/" }
tombi-diagnostic = { rev = "647fc3e40d7e507fa8379b808c506359e1475091", git = "https://github.com/nahco314/tombi/" }
tombi-formatter = { rev = "647fc3e40d7e507fa8379b808c506359e1475091", git = "https://github.com/nahco314/tombi/" }
tombi-json = { rev = "647fc3e40d7e507fa8379b808c506359e1475091", git = "https://github.com/nahco314/tombi/" }
tombi-lexer = { rev = "647fc3e40d7e507fa8379b808c506359e1475091", git = "https://github.com/nahco314/tombi/" }
tombi-schema-store = { rev = "647fc3e40d7e507fa8379b808c506359e1475091", git = "https://github.com/nahco314/tombi/" }
# tombi-config = { path = "../tombi/crates/tombi-config" }
# tombi-diagnostic = { path = "../tombi/crates/tombi-diagnostic" }
# tombi-formatter = { path = "../tombi/crates/tombi-formatter" }
# tombi-json = { path = "../tombi/crates/tombi-json" }
# tombi-lexer = { path = "../tombi/crates/tombi-lexer" }
# tombi-schema-store = { path = "../tombi/crates/tombi-schema-store" }

[build-dependencies]
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.128"
# panic = "abort"

[profile.super-release]
inherits = "release"
opt-level = 3
codegen-units = 1
debug = false
lto = "fat"
